// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin react jsx compilation completed drawer 1`] = `
Object {
  "chunks": Array [
    Object {
      "content": "<Drawer
      title=\\"tanchuang\\"
      
    
width='624px'
placement='right'
height='300px'
    footer={<div className=\\"ant-drawer-footer-button\\">
          <Button
            onClick={() => {
              // onCancel为内置取消处理函数，用于关闭弹窗
              // @ts-ignore
              if (onCancel !== false && onCancel) {
                onCancel();
              }
            }}
            btnText=\\"取消\\"
          />
          <Button
            btnText=\\"确认 \\"
            onClick={onOk} type=\\"primary\\" />
</div>}
      open={props.visible}
      destroyOnClose
      className='ued-drawer-wrap'
      
      
    >
<Drawer><View backgroundType={{\\"type\\": \\"cleanColor\\",
\\"color\\": \\"rgba(255, 255, 255, 1)\\"}} $$componentItem={{id: 'View_015712_1',uid: \\"View_015712_1\\"}} className=\\"View_View_015712_1\\" visible style={{\\"minHeight\\": \\"100%\\",
\\"display\\": \\"flex\\",
\\"padding\\": \\"20px 20px 20px 20px\\",
\\"flexDirection\\": \\"column\\",
\\"overflowY\\": \\"auto\\",
\\"width\\": \\"auto\\",
\\"height\\": \\"auto\\"}}><Button hasIcon={false} btnText=\\"推拉门\\" $$componentItem={{id: 'Button_269795',uid: \\"Button_269795\\"}} className=\\"Button_Button_269795\\" visible style={{\\"textAlign\\": \\"center\\"}} /></View></Drawer>
</Drawer>",
      "fileType": "tsx",
      "linkAfter": Array [
        "ReactComponentRenderStart",
        "ReactComponentRenderPre",
      ],
      "name": "ReactComponentRenderJSX",
      "type": "string",
    },
  ],
  "contextData": Object {},
  "depNames": Array [],
  "ir": Object {
    "actions": Array [],
    "analyzeResult": Object {
      "isUsingRef": false,
    },
    "appId": "1117743758138974208",
    "catalogItemId": "-1",
    "closeOnClickOverlay": false,
    "compState": Array [
      Object {
        "code": "bizId",
        "name": "业务主键",
      },
      Object {
        "code": "sceneCode",
        "name": "业务场景",
      },
      Object {
        "code": "bizData",
        "name": "业务数据",
      },
    ],
    "components": Array [
      Object {
        "compLib": "custom",
        "compName": "View",
        "compType": 0,
        "components": Array [
          Object {
            "compLib": "comm",
            "compName": "Button",
            "compType": 1,
            "components": Array [],
            "events": Object {},
            "id": "Button_269795",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "按钮",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Button_269795',uid: \\"Button_269795\\"}}##",
              "btnText": "推拉门",
              "className": "Button_Button_269795",
              "data-compid": "Button_269795",
              "hasIcon": false,
              "visible": true,
            },
            "setEvents": Array [],
            "style": Object {
              "textAlign": "center",
            },
            "type": "Button",
          },
        ],
        "events": Object {},
        "id": "View_015712_1",
        "isBusiObjContainer": false,
        "isContainer": true,
        "isLabelDropBoxChild": false,
        "label": "普通容器",
        "originClassName": "",
        "platform": "pc",
        "props": Object {
          "$$componentItem": "##{{id: 'View_015712_1',uid: \\"View_015712_1\\"}}##",
          "backgroundType": Object {
            "color": "rgba(255, 255, 255, 1)",
            "type": "cleanColor",
          },
          "className": "View_View_015712_1",
          "data-compid": "View_015712_1",
          "visible": true,
        },
        "setEvents": Array [],
        "style": Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "auto",
          "minHeight": "100%",
          "overflowY": "auto",
          "padding": "20px 20px 20px 20px",
          "width": "auto",
        },
        "type": "View",
      },
    ],
    "containerType": "Drawer",
    "dataSource": Array [],
    "deps": Array [
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "View",
        "package": "@/components/factory",
        "type": "View",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Button",
        "package": "@/components/factory",
        "type": "Button",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "PageProps",
        "package": "@/utils/withPageHOC",
        "type": "PageProps",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "withPageHOC",
        "package": "@/utils/withPageHOC",
        "type": "withPageHOC",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "messageApi",
        "package": "@/utils/messageApi",
        "type": "messageApi",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Spin",
        "package": "@/utils/messageApi",
        "type": "Spin",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "useTool",
        "package": "@/utils/useTool",
        "type": "useTool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "customFuncMapping",
        "package": "@/utils/customFuncMapping",
        "type": "customFuncMapping",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "createRenderId",
        "package": "@/utils/customFuncMapping",
        "type": "createRenderId",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "previewFile",
        "package": "@/utils/platform",
        "type": "previewFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "saveBlobFile",
        "package": "@/utils/platform",
        "type": "saveBlobFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "batchDownloadFileByIds",
        "package": "@/utils/platform",
        "type": "batchDownloadFileByIds",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "downloadByFileCode",
        "package": "@/utils/platform",
        "type": "downloadByFileCode",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "historytool",
        "package": "@/utils/historytool",
        "type": "historytool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "HISTORYTYPES",
        "package": "@/utils/historytool",
        "type": "HISTORYTYPES",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useDataSource",
        "package": "./useDataSource",
        "type": "useDataSource",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "getUid",
        "package": "@/utils/uid",
        "type": "getUid",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useTransSuperObjectParams",
        "package": "@/hooks/useTransSuperObjectParams",
        "type": "useTransSuperObjectParams",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "appInfo",
        "package": "@/utils/attrSpecPage",
        "type": "appInfo",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useLifeCycle",
        "package": "@/hooks/useLifeCycle",
        "type": "useLifeCycle",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Drawer",
        "package": "antd",
        "type": "Drawer",
        "version": "*",
      },
    ],
    "events": Array [],
    "footer": 1,
    "global": Object {
      "pageTypeMap": Object {
        "Drawer": Object {
          "1118088425614082048": true,
        },
      },
    },
    "globalDataSource": Object {},
    "height": 300,
    "id": "015712",
    "layout": "BlankLayout",
    "modalDrawData": Object {
      "closeOnClickOverlay": false,
      "closeOnMaskClick": undefined,
      "customHeight": undefined,
      "customWidth": undefined,
      "destroyOnClose": undefined,
      "fileName": "/tanchuang",
      "height": 300,
      "mode": undefined,
      "okText": undefined,
      "pageContainerType": undefined,
      "pageId": "1118088425614082048",
      "pageName": "tanchuang",
      "path": "/tanchuang",
      "position": undefined,
      "showCloseButton": undefined,
      "type": "/tanchuang",
      "width": 624,
    },
    "moduleName": "/tanchuang",
    "pageContainerType": "Drawer",
    "pageDynamicFlag": false,
    "pageId": "1118088425614082048",
    "pageName": "tanchuang",
    "pagePath": "/tanchuang",
    "placement": "right",
    "platform": "pc",
    "setEvents": Array [
      Object {
        "children": Array [],
        "dataId": "008233",
        "dataName": "event",
        "params": Array [],
        "value": "useEffect",
      },
      Object {
        "children": Array [
          Object {
            "actionObjId": "okCallbackData",
            "actionObjName": "system",
            "children": Array [],
            "dataId": 171817944402817300,
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 1,
            "options": Object {
              "compId": "okCallbackData",
              "compName": "system",
              "id": "030228",
            },
            "todoOptions": Array [],
            "value": "okCallbackData",
          },
          Object {
            "actionObjId": "closeModal",
            "actionObjName": "system",
            "children": Array [],
            "dataId": 171817944402802980,
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 2,
            "options": Object {
              "compId": "closeModal",
              "compName": "system",
              "id": "3467977",
            },
            "todoOptions": Array [],
            "value": "closeModal",
          },
        ],
        "dataId": 171817944402859330,
        "dataName": "event",
        "params": Array [],
        "value": "onOk",
      },
      Object {
        "children": Array [
          Object {
            "actionObjId": "page",
            "actionObjName": "page",
            "children": Array [],
            "dataId": "952548_1",
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 1,
            "options": Object {
              "compId": "page",
              "compName": "page",
              "id": "6913603",
            },
            "todoOptions": Array [],
            "value": "closeModal",
          },
        ],
        "dataId": "952548",
        "dataName": "event",
        "params": Array [],
        "value": "onCancel",
      },
    ],
    "style": Object {},
    "type": "Drawer",
    "width": 624,
  },
}
`;

exports[`plugin react jsx compilation completed modal 1`] = `
Object {
  "chunks": Array [
    Object {
      "content": "<Modal
      title=\\"弹窗\\"
      
    
width='624px'
    
      open={props.visible}
      destroyOnClose
      className='ued-modal-wrap'
      
      
    >
<div
style={
  {\\"overflowX\\":\\"auto\\"}}
><Modal><View backgroundType={{\\"type\\": \\"cleanColor\\",
\\"color\\": \\"rgba(255, 255, 255, 1)\\"}} $$componentItem={{id: 'View_9176856_1',uid: \\"View_9176856_1\\"}} className=\\"View_View_9176856_1\\" visible style={{\\"minHeight\\": \\"100%\\",
\\"display\\": \\"flex\\",
\\"padding\\": \\"20px 20px 20px 20px\\",
\\"flexDirection\\": \\"column\\",
\\"overflowY\\": \\"auto\\",
\\"width\\": \\"auto\\",
\\"height\\": \\"auto\\"}}><Text content=\\"弹窗\\" textType=\\"span\\" $$componentItem={{id: 'Text_0226354',uid: \\"Text_0226354\\"}} className=\\"Text_Text_0226354\\" visible style={{\\"textAlign\\": \\"left\\",
\\"fontSize\\": \\"14px\\",
\\"lineHeight\\": \\"24px\\",
\\"color\\": \\"#1c242e\\",
\\"backgroundColor\\": \\"rgba(255, 255, 255,0)\\"}} /></View></Modal></div>
</Modal>",
      "fileType": "tsx",
      "linkAfter": Array [
        "ReactComponentRenderStart",
        "ReactComponentRenderPre",
      ],
      "name": "ReactComponentRenderJSX",
      "type": "string",
    },
  ],
  "contextData": Object {},
  "depNames": Array [],
  "ir": Object {
    "actions": Array [],
    "analyzeResult": Object {
      "isUsingRef": false,
    },
    "appId": "1117743758138974208",
    "catalogItemId": "-1",
    "closeOnClickOverlay": false,
    "compState": Array [
      Object {
        "code": "bizId",
        "name": "业务主键",
      },
      Object {
        "code": "sceneCode",
        "name": "业务场景",
      },
      Object {
        "code": "bizData",
        "name": "业务数据",
      },
    ],
    "components": Array [
      Object {
        "compLib": "custom",
        "compName": "View",
        "compType": 0,
        "components": Array [
          Object {
            "compLib": "custom",
            "compName": "Text",
            "compType": 1,
            "components": Array [],
            "events": Object {},
            "id": "Text_0226354",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "文本",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Text_0226354',uid: \\"Text_0226354\\"}}##",
              "className": "Text_Text_0226354",
              "content": "弹窗",
              "data-compid": "Text_0226354",
              "textType": "span",
              "visible": true,
            },
            "setEvents": Array [],
            "style": Object {
              "backgroundColor": "rgba(255, 255, 255,0)",
              "color": "#1c242e",
              "fontSize": "14px",
              "lineHeight": "24px",
              "textAlign": "left",
            },
            "type": "Text",
          },
        ],
        "events": Object {},
        "id": "View_9176856_1",
        "isBusiObjContainer": false,
        "isContainer": true,
        "isLabelDropBoxChild": false,
        "label": "普通容器",
        "originClassName": "",
        "platform": "pc",
        "props": Object {
          "$$componentItem": "##{{id: 'View_9176856_1',uid: \\"View_9176856_1\\"}}##",
          "backgroundType": Object {
            "color": "rgba(255, 255, 255, 1)",
            "type": "cleanColor",
          },
          "className": "View_View_9176856_1",
          "data-compid": "View_9176856_1",
          "visible": true,
        },
        "setEvents": Array [],
        "style": Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "auto",
          "minHeight": "100%",
          "overflowY": "auto",
          "padding": "20px 20px 20px 20px",
          "width": "auto",
        },
        "type": "View",
      },
    ],
    "containerType": "Modal",
    "customHeight": 500,
    "customWidth": 624,
    "dataSource": Array [],
    "deps": Array [
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "View",
        "package": "@/components/factory",
        "type": "View",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Text",
        "package": "@/components/factory",
        "type": "Text",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "PageProps",
        "package": "@/utils/withPageHOC",
        "type": "PageProps",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "withPageHOC",
        "package": "@/utils/withPageHOC",
        "type": "withPageHOC",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "messageApi",
        "package": "@/utils/messageApi",
        "type": "messageApi",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Spin",
        "package": "@/utils/messageApi",
        "type": "Spin",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "useTool",
        "package": "@/utils/useTool",
        "type": "useTool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "customFuncMapping",
        "package": "@/utils/customFuncMapping",
        "type": "customFuncMapping",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "createRenderId",
        "package": "@/utils/customFuncMapping",
        "type": "createRenderId",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "previewFile",
        "package": "@/utils/platform",
        "type": "previewFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "saveBlobFile",
        "package": "@/utils/platform",
        "type": "saveBlobFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "batchDownloadFileByIds",
        "package": "@/utils/platform",
        "type": "batchDownloadFileByIds",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "downloadByFileCode",
        "package": "@/utils/platform",
        "type": "downloadByFileCode",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "historytool",
        "package": "@/utils/historytool",
        "type": "historytool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "HISTORYTYPES",
        "package": "@/utils/historytool",
        "type": "HISTORYTYPES",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useDataSource",
        "package": "./useDataSource",
        "type": "useDataSource",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "getUid",
        "package": "@/utils/uid",
        "type": "getUid",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useTransSuperObjectParams",
        "package": "@/hooks/useTransSuperObjectParams",
        "type": "useTransSuperObjectParams",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "appInfo",
        "package": "@/utils/attrSpecPage",
        "type": "appInfo",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useLifeCycle",
        "package": "@/hooks/useLifeCycle",
        "type": "useLifeCycle",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Modal",
        "package": "antd",
        "type": "Modal",
        "version": "*",
      },
    ],
    "events": Array [],
    "footer": 1,
    "global": Object {
      "pageTypeMap": Object {
        "Drawer": Object {
          "1118088425614082048": true,
        },
      },
    },
    "globalDataSource": Object {},
    "id": "9176856",
    "layout": "BlankLayout",
    "modalDrawData": Object {
      "closeOnClickOverlay": false,
      "closeOnMaskClick": undefined,
      "customHeight": 500,
      "customWidth": 624,
      "destroyOnClose": undefined,
      "fileName": "/tanchuang",
      "height": undefined,
      "mode": undefined,
      "okText": undefined,
      "pageContainerType": undefined,
      "pageId": "1117744049718599680",
      "pageName": "弹窗",
      "path": "/tanchuang",
      "position": undefined,
      "showCloseButton": undefined,
      "type": "/tanchuang",
      "width": 624,
    },
    "moduleName": "/tanchuang",
    "pageContainerType": "Modal",
    "pageDynamicFlag": false,
    "pageId": "1117744049718599680",
    "pageName": "弹窗",
    "pagePath": "/tanchuang",
    "platform": "pc",
    "setEvents": Array [
      Object {
        "children": Array [],
        "dataId": "9079287",
        "dataName": "event",
        "params": Array [],
        "value": "useEffect",
      },
      Object {
        "children": Array [
          Object {
            "actionObjId": "okCallbackData",
            "actionObjName": "system",
            "children": Array [],
            "dataId": 171809733160132740,
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 1,
            "options": Object {
              "compId": "okCallbackData",
              "compName": "system",
              "id": "772885",
            },
            "todoOptions": Array [],
            "value": "okCallbackData",
          },
          Object {
            "actionObjId": "closeModal",
            "actionObjName": "system",
            "children": Array [],
            "dataId": 171809733160158900,
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 2,
            "options": Object {
              "compId": "closeModal",
              "compName": "system",
              "id": "687611",
            },
            "todoOptions": Array [],
            "value": "closeModal",
          },
        ],
        "dataId": 171809733160038140,
        "dataName": "event",
        "params": Array [],
        "value": "onOk",
      },
      Object {
        "children": Array [
          Object {
            "actionObjId": "page",
            "actionObjName": "page",
            "children": Array [],
            "dataId": 171809733160190500,
            "dataName": "action",
            "elseIfs": Array [],
            "line_number": 1,
            "options": Object {
              "compId": "page",
              "compName": "page",
              "id": "006597",
            },
            "todoOptions": Array [],
            "value": "closeModal",
          },
        ],
        "dataId": 171809733160139420,
        "dataName": "event",
        "params": Array [],
        "value": "onCancel",
      },
    ],
    "style": Object {},
    "type": "Modal",
    "width": 624,
  },
}
`;

exports[`plugin react jsx compilation completed page 1`] = `
Object {
  "chunks": Array [
    Object {
      "content": "<Page><View backgroundType={{\\"type\\": \\"cleanColor\\",
\\"color\\": \\"rgba(255, 255, 255, 1)\\"}} $$componentItem={{id: 'View_223095_1',uid: \\"View_223095_1\\"}} className=\\"View_View_223095_1\\" visible style={{\\"minHeight\\": \\"100%\\",
\\"display\\": \\"flex\\",
\\"padding\\": \\"20px 20px 20px 20px\\",
\\"flexDirection\\": \\"column\\",
\\"overflowY\\": \\"auto\\",
\\"width\\": \\"auto\\",
\\"height\\": \\"auto\\"}}><Button hasIcon={false} btnText=\\"打开弹窗\\" $$componentItem={{id: 'Button_578992',uid: \\"Button_578992\\"}} className=\\"Button_Button_578992\\" visible style={{\\"textAlign\\": \\"center\\"}} onClick={()=>{ console.log(\\"这里找不到参数/？\\")}} /><Button hasIcon={false} btnText=\\"跳转\\" $$componentItem={{id: 'Button_18452',uid: \\"Button_18452\\"}} className=\\"Button_Button_18452\\" visible style={{\\"textAlign\\": \\"center\\"}} onClick={()=>{ console.log(\\"这里找不到参数/？\\")}} /><Button hasIcon={false} btnText=\\"打开推拉门\\" $$componentItem={{id: 'Button_055289',uid: \\"Button_055289\\"}} className=\\"Button_Button_055289\\" visible style={{\\"textAlign\\": \\"center\\"}} onClick={()=>{ console.log(\\"这里找不到参数/？\\")}} /><Popover page={{\\"pagePath\\": \\"/qipao\\",
\\"pageId\\": \\"1118151672643977216\\",
\\"pageName\\": \\"气泡\\",
\\"options\\": [{\\"name\\": \\"业务主键\\",
\\"code\\": \\"bizId\\"},{\\"name\\": \\"业务场景\\",
\\"code\\": \\"sceneCode\\"},{\\"name\\": \\"业务数据\\",
\\"code\\": \\"bizData\\"}],
\\"tipType\\": \\"1\\",
\\"trigger\\": \\"click\\",
\\"placement\\": \\"top\\"}} id=\\"Button_9738222\\"><Button hasIcon={false} btnText=\\"气泡页面\\" $$componentItem={{id: 'Button_9738222',uid: \\"Button_9738222\\"}} className={classNames(\\"Button_Button_9738222\\", \\"Button_Button_9738222\\")} visible style={{\\"textAlign\\": \\"center\\"}} /></Popover><Popover options={{\\"tipType\\": \\"2\\",
\\"title\\": \\"123\\",
\\"content\\": \\"123\\",
\\"trigger\\": \\"click\\",
\\"placement\\": \\"bottom\\"}} id=\\"Button_25136\\"><Button hasIcon={false} btnText=\\"气泡配置1\\" $$componentItem={{id: 'Button_25136',uid: \\"Button_25136\\"}} className={classNames(\\"Button_Button_25136\\", \\"Button_Button_25136\\")} visible style={{\\"textAlign\\": \\"center\\"}} /></Popover><BOFramer busiCompId=\\"1118362013540765696\\" state={undefined} $$componentItem={{id: 'BOFramer_321472',uid: \\"BOFramer_321472\\"}} className=\\"BOFramer_BOFramer_321472\\" style={{\\"margin\\": \\"0 0 12px 0\\"}} /></View></Page>",
      "fileType": "tsx",
      "linkAfter": Array [
        "ReactComponentRenderStart",
        "ReactComponentRenderPre",
      ],
      "name": "ReactComponentRenderJSX",
      "type": "string",
    },
  ],
  "contextData": Object {},
  "depNames": Array [],
  "ir": Object {
    "actions": Array [],
    "analyzeResult": Object {
      "isUsingRef": false,
    },
    "appId": "1117743758138974208",
    "catalogItemId": "-1",
    "compState": Array [
      Object {
        "code": "bizId",
        "name": "业务主键",
      },
      Object {
        "code": "sceneCode",
        "name": "业务场景",
      },
      Object {
        "code": "bizData",
        "name": "业务数据",
      },
    ],
    "components": Array [
      Object {
        "compLib": "custom",
        "compName": "View",
        "compType": 0,
        "components": Array [
          Object {
            "compLib": "comm",
            "compName": "Button",
            "compType": 1,
            "components": Array [],
            "events": Object {
              "onClick": Object {
                "id": "Button_Button_578992_onClick",
                "value": Array [
                  Object {
                    "callback1": Array [
                      Object {
                        "dataId": 171817711953502900,
                        "line_number": 2,
                        "options": Object {
                          "compId": "console",
                          "compName": "system",
                          "id": "905917",
                          "pageJsonId": "223095",
                          "value": Array [
                            "弹窗确认",
                          ],
                        },
                        "path": undefined,
                        "shielding": undefined,
                        "type": "console",
                      },
                    ],
                    "callback2": Array [
                      Object {
                        "dataId": 171817713646699500,
                        "line_number": 3,
                        "options": Object {
                          "compId": "console",
                          "compName": "system",
                          "id": "942347",
                          "pageJsonId": "223095",
                          "value": Array [
                            "弹窗关闭",
                          ],
                        },
                        "path": undefined,
                        "shielding": undefined,
                        "type": "console",
                      },
                    ],
                    "dataId": 171809736011708300,
                    "line_number": 1,
                    "options": Object {
                      "compId": "showCustomModal",
                      "compName": "system",
                      "id": "4593132",
                      "modalname": "/tanchuang",
                      "pageId": "1117744049718599680",
                      "pageJsonId": "223095",
                    },
                    "path": undefined,
                    "shielding": undefined,
                    "type": "showCustomModal",
                  },
                ],
              },
            },
            "id": "Button_578992",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "按钮",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Button_578992',uid: \\"Button_578992\\"}}##",
              "btnText": "打开弹窗",
              "className": "Button_Button_578992",
              "data-compid": "Button_578992",
              "hasIcon": false,
              "visible": true,
            },
            "setEvents": Array [
              Object {
                "children": Array [
                  Object {
                    "actionObjId": "showCustomModal",
                    "actionObjName": "system",
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "actionObjId": "console",
                            "actionObjName": "system",
                            "children": Array [],
                            "dataId": 171817711953502900,
                            "dataName": "action",
                            "elseIfs": Array [],
                            "line_number": 2,
                            "options": Object {
                              "compId": "console",
                              "compName": "system",
                              "id": "905917",
                              "pageJsonId": "223095",
                              "value": Array [
                                "弹窗确认",
                              ],
                            },
                            "todoOptions": Array [
                              "valueArray",
                            ],
                            "value": "console",
                          },
                        ],
                        "dataId": 171809736011717980,
                        "dataName": "callback",
                        "elseIfs": Array [],
                        "params": Array [
                          Object {
                            "name": "okData_4593132",
                            "title": "弹窗确认回调参数",
                            "value": "$okData_4593132$",
                          },
                        ],
                        "value": "callback1",
                      },
                      Object {
                        "children": Array [
                          Object {
                            "actionObjId": "console",
                            "actionObjName": "system",
                            "children": Array [],
                            "dataId": 171817713646699500,
                            "dataName": "action",
                            "elseIfs": Array [],
                            "line_number": 3,
                            "options": Object {
                              "compId": "console",
                              "compName": "system",
                              "id": "942347",
                              "pageJsonId": "223095",
                              "value": Array [
                                "弹窗关闭",
                              ],
                            },
                            "todoOptions": Array [
                              "valueArray",
                            ],
                            "value": "console",
                          },
                        ],
                        "dataId": 171809736011746460,
                        "dataName": "callback",
                        "elseIfs": Array [],
                        "params": Array [],
                        "value": "callback2",
                      },
                    ],
                    "dataId": 171809736011708300,
                    "dataName": "action",
                    "elseIfs": Array [],
                    "line_number": 1,
                    "options": Object {
                      "compId": "showCustomModal",
                      "compName": "system",
                      "id": "4593132",
                      "modalname": "/tanchuang",
                      "pageId": "1117744049718599680",
                      "pageJsonId": "223095",
                    },
                    "todoOptions": Array [
                      "modalname",
                      "compState",
                    ],
                    "value": "showCustomModal",
                  },
                ],
                "dataId": 171809735318639330,
                "dataName": "event",
                "params": Array [
                  Object {
                    "name": "e",
                    "title": "事件对象",
                    "value": "$e$",
                  },
                ],
                "value": "onClick",
              },
            ],
            "style": Object {
              "textAlign": "center",
            },
            "type": "Button",
          },
          Object {
            "compLib": "comm",
            "compName": "Button",
            "compType": 1,
            "components": Array [],
            "events": Object {
              "onClick": Object {
                "id": "Button_Button_18452_onClick",
                "value": Array [
                  Object {
                    "dataId": 171817939017108380,
                    "line_number": 1,
                    "options": Object {
                      "compId": "history",
                      "compName": "system",
                      "id": "454345",
                      "modalPath": "/tanchuang",
                      "pageId": "1118087941444599808",
                      "pageJsonId": "223095",
                      "pathname": "/tanchuang",
                      "selectedType": "page",
                      "type": "push",
                    },
                    "path": undefined,
                    "shielding": undefined,
                    "type": "history",
                  },
                ],
              },
            },
            "id": "Button_18452",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "按钮",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Button_18452',uid: \\"Button_18452\\"}}##",
              "btnText": "跳转",
              "className": "Button_Button_18452",
              "data-compid": "Button_18452",
              "hasIcon": false,
              "visible": true,
            },
            "setEvents": Array [
              Object {
                "children": Array [
                  Object {
                    "actionObjId": "history",
                    "actionObjName": "system",
                    "children": Array [],
                    "dataId": 171817939017108380,
                    "dataName": "action",
                    "elseIfs": Array [],
                    "line_number": 1,
                    "options": Object {
                      "compId": "history",
                      "compName": "system",
                      "id": "454345",
                      "modalPath": "/tanchuang",
                      "pageId": "1118087941444599808",
                      "pageJsonId": "223095",
                      "pathname": "/tanchuang",
                      "selectedType": "page",
                      "type": "push",
                    },
                    "todoOptions": Array [
                      "historyType",
                      "pathname",
                      "searchParams",
                      "routerData",
                    ],
                    "value": "history",
                  },
                ],
                "dataId": 171817937260434500,
                "dataName": "event",
                "params": Array [
                  Object {
                    "name": "e",
                    "title": "事件对象",
                    "value": "$e$",
                  },
                ],
                "value": "onClick",
              },
            ],
            "style": Object {
              "textAlign": "center",
            },
            "type": "Button",
          },
          Object {
            "compLib": "comm",
            "compName": "Button",
            "compType": 1,
            "components": Array [],
            "events": Object {
              "onClick": Object {
                "id": "Button_Button_055289_onClick",
                "value": Array [
                  Object {
                    "callback1": Array [],
                    "callback2": Array [],
                    "dataId": 171817947454230000,
                    "line_number": 1,
                    "options": Object {
                      "compId": "showCustomModal",
                      "compName": "system",
                      "id": "586704",
                      "modalname": "/tanchuang",
                      "pageId": "1118088425614082048",
                      "pageJsonId": "223095",
                    },
                    "path": undefined,
                    "shielding": undefined,
                    "type": "showCustomModal",
                  },
                ],
              },
            },
            "id": "Button_055289",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "按钮",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Button_055289',uid: \\"Button_055289\\"}}##",
              "btnText": "打开推拉门",
              "className": "Button_Button_055289",
              "data-compid": "Button_055289",
              "hasIcon": false,
              "visible": true,
            },
            "setEvents": Array [
              Object {
                "children": Array [
                  Object {
                    "actionObjId": "showCustomModal",
                    "actionObjName": "system",
                    "children": Array [
                      Object {
                        "children": Array [],
                        "dataId": 171817947454226100,
                        "dataName": "callback",
                        "elseIfs": Array [],
                        "params": Array [
                          Object {
                            "name": "okData_586704",
                            "title": "弹窗确认回调参数",
                            "value": "$okData_586704$",
                          },
                        ],
                        "value": "callback1",
                      },
                      Object {
                        "children": Array [],
                        "dataId": 171817947454254140,
                        "dataName": "callback",
                        "elseIfs": Array [],
                        "params": Array [],
                        "value": "callback2",
                      },
                    ],
                    "dataId": 171817947454230000,
                    "dataName": "action",
                    "elseIfs": Array [],
                    "line_number": 1,
                    "options": Object {
                      "compId": "showCustomModal",
                      "compName": "system",
                      "id": "586704",
                      "modalname": "/tanchuang",
                      "pageId": "1118088425614082048",
                      "pageJsonId": "223095",
                    },
                    "todoOptions": Array [
                      "modalname",
                      "componentState",
                    ],
                    "value": "showCustomModal",
                  },
                ],
                "dataId": 171817946594247740,
                "dataName": "event",
                "params": Array [
                  Object {
                    "name": "e",
                    "title": "事件对象",
                    "value": "$e$",
                  },
                ],
                "value": "onClick",
              },
            ],
            "style": Object {
              "textAlign": "center",
            },
            "type": "Button",
          },
          Object {
            "compLib": "antd-mobile-5",
            "compName": "Popover",
            "components": Array [
              Object {
                "compLib": "comm",
                "compName": "Button",
                "compType": 1,
                "components": Array [],
                "events": Object {},
                "id": "Button_9738222",
                "isBusiObjContainer": false,
                "isContainer": false,
                "isInlineBlock": true,
                "isLabelDropBoxChild": false,
                "label": "按钮",
                "originClassName": "Button_Button_9738222",
                "platform": "pc",
                "props": Object {
                  "$$componentItem": "##{{id: 'Button_9738222',uid: \\"Button_9738222\\"}}##",
                  "btnText": "气泡页面",
                  "className": "$classNames(\\"Button_Button_9738222\\", \\"Button_Button_9738222\\")$",
                  "data-compid": "Button_9738222",
                  "hasIcon": false,
                  "visible": true,
                },
                "setEvents": Array [],
                "style": Object {
                  "textAlign": "center",
                },
                "type": "Button",
              },
            ],
            "events": Object {},
            "platform": "h5",
            "props": Object {
              "id": "Button_9738222",
              "page": Object {
                "options": Array [
                  Object {
                    "code": "bizId",
                    "name": "业务主键",
                  },
                  Object {
                    "code": "sceneCode",
                    "name": "业务场景",
                  },
                  Object {
                    "code": "bizData",
                    "name": "业务数据",
                  },
                ],
                "pageId": "1118151672643977216",
                "pageName": "气泡",
                "pagePath": "/qipao",
                "placement": "top",
                "tipType": "1",
                "trigger": "click",
              },
            },
            "type": "Popover",
          },
          Object {
            "compLib": "antd-mobile-5",
            "compName": "Popover",
            "components": Array [
              Object {
                "compLib": "comm",
                "compName": "Button",
                "compType": 1,
                "components": Array [],
                "events": Object {},
                "id": "Button_25136",
                "isBusiObjContainer": false,
                "isContainer": false,
                "isInlineBlock": true,
                "isLabelDropBoxChild": false,
                "label": "按钮",
                "originClassName": "Button_Button_25136",
                "platform": "pc",
                "props": Object {
                  "$$componentItem": "##{{id: 'Button_25136',uid: \\"Button_25136\\"}}##",
                  "btnText": "气泡配置1",
                  "className": "$classNames(\\"Button_Button_25136\\", \\"Button_Button_25136\\")$",
                  "data-compid": "Button_25136",
                  "hasIcon": false,
                  "visible": true,
                },
                "setEvents": Array [],
                "style": Object {
                  "textAlign": "center",
                },
                "type": "Button",
              },
            ],
            "events": Object {},
            "platform": "h5",
            "props": Object {
              "id": "Button_25136",
              "options": Object {
                "content": "123",
                "placement": "bottom",
                "tipType": "2",
                "title": "123",
                "trigger": "click",
              },
            },
            "type": "Popover",
          },
          Object {
            "alias": "BOFramer",
            "compLib": "@/components",
            "compName": "BOFramer",
            "compType": 4,
            "components": Array [],
            "events": Object {},
            "group": Object {
              "方法": Object {
                "groupExtra": Array [
                  Object {
                    "funName": "refreshCompFunc",
                    "key": "busiCompFuncs",
                    "label": "刷新",
                  },
                ],
              },
            },
            "id": "BOFramer_321472",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isLabelDropBoxChild": false,
            "label": "业务组件",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'BOFramer_321472',uid: \\"BOFramer_321472\\"}}##",
              "busiCompId": "1118362013540765696",
              "className": "BOFramer_BOFramer_321472",
              "data-compid": "BOFramer_321472",
              "state": undefined,
            },
            "setEvents": Array [],
            "style": Object {
              "margin": "0 0 12px 0",
            },
            "type": "BOFramer",
          },
        ],
        "events": Object {},
        "id": "View_223095_1",
        "isBusiObjContainer": false,
        "isContainer": true,
        "isLabelDropBoxChild": false,
        "label": "普通容器",
        "originClassName": "",
        "platform": "pc",
        "props": Object {
          "$$componentItem": "##{{id: 'View_223095_1',uid: \\"View_223095_1\\"}}##",
          "backgroundType": Object {
            "color": "rgba(255, 255, 255, 1)",
            "type": "cleanColor",
          },
          "className": "View_View_223095_1",
          "data-compid": "View_223095_1",
          "visible": true,
        },
        "setEvents": Array [],
        "style": Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "auto",
          "minHeight": "100%",
          "overflowY": "auto",
          "padding": "20px 20px 20px 20px",
          "width": "auto",
        },
        "type": "View",
      },
    ],
    "containerType": "Page",
    "dataSource": Array [],
    "deps": Array [
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "View",
        "package": "@/components/factory",
        "type": "View",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Button",
        "package": "@/components/factory",
        "type": "Button",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "YeWuZuJian",
        "package": "@/components/businessComponent/YeWuZuJian",
        "type": "YeWuZuJian",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "PageProps",
        "package": "@/utils/withPageHOC",
        "type": "PageProps",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "withPageHOC",
        "package": "@/utils/withPageHOC",
        "type": "withPageHOC",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "messageApi",
        "package": "@/utils/messageApi",
        "type": "messageApi",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Spin",
        "package": "@/utils/messageApi",
        "type": "Spin",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "useTool",
        "package": "@/utils/useTool",
        "type": "useTool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "customFuncMapping",
        "package": "@/utils/customFuncMapping",
        "type": "customFuncMapping",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "createRenderId",
        "package": "@/utils/customFuncMapping",
        "type": "createRenderId",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "previewFile",
        "package": "@/utils/platform",
        "type": "previewFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "saveBlobFile",
        "package": "@/utils/platform",
        "type": "saveBlobFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "batchDownloadFileByIds",
        "package": "@/utils/platform",
        "type": "batchDownloadFileByIds",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "downloadByFileCode",
        "package": "@/utils/platform",
        "type": "downloadByFileCode",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "historytool",
        "package": "@/utils/historytool",
        "type": "historytool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "HISTORYTYPES",
        "package": "@/utils/historytool",
        "type": "HISTORYTYPES",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useDataSource",
        "package": "./useDataSource",
        "type": "useDataSource",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "getUid",
        "package": "@/utils/uid",
        "type": "getUid",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useTransSuperObjectParams",
        "package": "@/hooks/useTransSuperObjectParams",
        "type": "useTransSuperObjectParams",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "appInfo",
        "package": "@/utils/attrSpecPage",
        "type": "appInfo",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useLifeCycle",
        "package": "@/hooks/useLifeCycle",
        "type": "useLifeCycle",
        "version": "*",
      },
    ],
    "events": Array [],
    "global": Object {
      "pageTypeMap": Object {
        "Drawer": Object {
          "1118088425614082048": true,
        },
      },
    },
    "globalDataSource": Object {},
    "id": "223095",
    "ignoreLogin": false,
    "layout": "BaseLayout",
    "modalDrawData": Object {},
    "moduleName": "/home",
    "pageContainerType": "Page",
    "pageDynamicFlag": false,
    "pageId": "1117743888254672896",
    "pageLayout": "BaseLayout",
    "pageName": "home",
    "pagePath": "/home",
    "platform": "pc",
    "searchParams": Array [
      Object {
        "code": "bizId",
        "name": "业务主键",
      },
      Object {
        "code": "sceneCode",
        "name": "业务场景",
      },
      Object {
        "code": "bizData",
        "name": "业务数据",
      },
    ],
    "setEvents": Array [
      Object {
        "children": Array [],
        "dataId": "08137",
        "dataName": "event",
        "params": Array [],
        "value": "useEffect",
      },
    ],
    "style": Object {},
    "type": "Page",
  },
}
`;

exports[`plugin react jsx compilation completed popover 1`] = `
Object {
  "chunks": Array [
    Object {
      "content": "<Popover><View backgroundType={{\\"type\\": \\"cleanColor\\",
\\"color\\": \\"rgba(255, 255, 255, 1)\\"}} $$componentItem={{id: 'View_556002_1',uid: \\"View_556002_1\\"}} className=\\"View_View_556002_1\\" visible style={{\\"minHeight\\": \\"100%\\",
\\"display\\": \\"flex\\",
\\"padding\\": \\"20px 20px 20px 20px\\",
\\"flexDirection\\": \\"column\\",
\\"overflowY\\": \\"auto\\",
\\"width\\": \\"auto\\",
\\"height\\": \\"auto\\"}}><Button hasIcon={false} btnText=\\"气泡\\" $$componentItem={{id: 'Button_718926',uid: \\"Button_718926\\"}} className=\\"Button_Button_718926\\" visible style={{\\"textAlign\\": \\"center\\"}} /></View></Popover>",
      "fileType": "tsx",
      "linkAfter": Array [
        "ReactComponentRenderStart",
        "ReactComponentRenderPre",
      ],
      "name": "ReactComponentRenderJSX",
      "type": "string",
    },
  ],
  "contextData": Object {},
  "depNames": Array [],
  "ir": Object {
    "actions": Array [],
    "analyzeResult": Object {
      "isUsingRef": false,
    },
    "appId": "1117743758138974208",
    "catalogItemId": "-1",
    "closeOnClickOverlay": true,
    "compState": Array [
      Object {
        "code": "bizId",
        "name": "业务主键",
      },
      Object {
        "code": "sceneCode",
        "name": "业务场景",
      },
      Object {
        "code": "bizData",
        "name": "业务数据",
      },
    ],
    "components": Array [
      Object {
        "compLib": "custom",
        "compName": "View",
        "compType": 0,
        "components": Array [
          Object {
            "compLib": "comm",
            "compName": "Button",
            "compType": 1,
            "components": Array [],
            "events": Object {},
            "id": "Button_718926",
            "isBusiObjContainer": false,
            "isContainer": false,
            "isInlineBlock": true,
            "isLabelDropBoxChild": false,
            "label": "按钮",
            "originClassName": "",
            "platform": "pc",
            "props": Object {
              "$$componentItem": "##{{id: 'Button_718926',uid: \\"Button_718926\\"}}##",
              "btnText": "气泡",
              "className": "Button_Button_718926",
              "data-compid": "Button_718926",
              "hasIcon": false,
              "visible": true,
            },
            "setEvents": Array [],
            "style": Object {
              "textAlign": "center",
            },
            "type": "Button",
          },
        ],
        "events": Object {},
        "id": "View_556002_1",
        "isBusiObjContainer": false,
        "isContainer": true,
        "isLabelDropBoxChild": false,
        "label": "普通容器",
        "originClassName": "",
        "platform": "pc",
        "props": Object {
          "$$componentItem": "##{{id: 'View_556002_1',uid: \\"View_556002_1\\"}}##",
          "backgroundType": Object {
            "color": "rgba(255, 255, 255, 1)",
            "type": "cleanColor",
          },
          "className": "View_View_556002_1",
          "data-compid": "View_556002_1",
          "visible": true,
        },
        "setEvents": Array [],
        "style": Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "auto",
          "minHeight": "100%",
          "overflowY": "auto",
          "padding": "20px 20px 20px 20px",
          "width": "auto",
        },
        "type": "View",
      },
    ],
    "containerType": "Popover",
    "customHeight": 500,
    "customWidth": 624,
    "dataSource": Array [],
    "deps": Array [
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "View",
        "package": "@/components/factory",
        "type": "View",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Button",
        "package": "@/components/factory",
        "type": "Button",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "PageProps",
        "package": "@/utils/withPageHOC",
        "type": "PageProps",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "withPageHOC",
        "package": "@/utils/withPageHOC",
        "type": "withPageHOC",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "messageApi",
        "package": "@/utils/messageApi",
        "type": "messageApi",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "Spin",
        "package": "@/utils/messageApi",
        "type": "Spin",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "useTool",
        "package": "@/utils/useTool",
        "type": "useTool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "customFuncMapping",
        "package": "@/utils/customFuncMapping",
        "type": "customFuncMapping",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "createRenderId",
        "package": "@/utils/customFuncMapping",
        "type": "createRenderId",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "previewFile",
        "package": "@/utils/platform",
        "type": "previewFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "saveBlobFile",
        "package": "@/utils/platform",
        "type": "saveBlobFile",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "batchDownloadFileByIds",
        "package": "@/utils/platform",
        "type": "batchDownloadFileByIds",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "downloadByFileCode",
        "package": "@/utils/platform",
        "type": "downloadByFileCode",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "historytool",
        "package": "@/utils/historytool",
        "type": "historytool",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "HISTORYTYPES",
        "package": "@/utils/historytool",
        "type": "HISTORYTYPES",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useDataSource",
        "package": "./useDataSource",
        "type": "useDataSource",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "getUid",
        "package": "@/utils/uid",
        "type": "getUid",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useTransSuperObjectParams",
        "package": "@/hooks/useTransSuperObjectParams",
        "type": "useTransSuperObjectParams",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": true,
        "exportName": "appInfo",
        "package": "@/utils/attrSpecPage",
        "type": "appInfo",
        "version": "*",
      },
      Object {
        "dependencyType": "External",
        "destructuring": false,
        "exportName": "useLifeCycle",
        "package": "@/hooks/useLifeCycle",
        "type": "useLifeCycle",
        "version": "*",
      },
    ],
    "events": Array [],
    "footer": 1,
    "global": Object {
      "pageTypeMap": Object {
        "Drawer": Object {
          "1118088425614082048": true,
        },
      },
    },
    "globalDataSource": Object {},
    "id": "556002",
    "layout": "BlankLayout",
    "modalDrawData": Object {
      "closeOnClickOverlay": true,
      "closeOnMaskClick": undefined,
      "customHeight": 500,
      "customWidth": 624,
      "destroyOnClose": undefined,
      "fileName": "/qipao",
      "height": undefined,
      "mode": undefined,
      "okText": undefined,
      "pageContainerType": undefined,
      "pageId": "1118151672643977216",
      "pageName": "气泡",
      "path": "/qipao",
      "position": undefined,
      "showCloseButton": undefined,
      "type": "/qipao",
      "width": 624,
    },
    "moduleName": "/qipao",
    "pageContainerType": "Popover",
    "pageDynamicFlag": false,
    "pageId": "1118151672643977216",
    "pageName": "气泡",
    "pagePath": "/qipao",
    "placement": "right",
    "platform": "pc",
    "setEvents": Array [
      Object {
        "children": Array [],
        "dataId": "615015",
        "dataName": "event",
        "params": Array [],
        "value": "useEffect",
      },
    ],
    "style": Object {},
    "type": "Popover",
    "width": 624,
  },
}
`;
